fix wrap

--- a/client/src/assets/scss/common.scss
+++ b/client/src/assets/scss/common.scss
@@ -1,3 +1,6 @@
+body, html{
+	overflow: hidden!important;
+  }
 .d {
 	&-flex {
 		display: flex;
